[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "hibp-check"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
indicatif = "0.17.6"
itertools = "0.11.0"
kdbx4 = "0.5.1"
rpassword = "7.2.0"
futures = "0.3.28"
rayon = "1.8.0"
lazy_static = "1.4.0"
sha-1 = "0.10.1"

[dependencies.clap]
features = ["derive"]
version = "4.4.2"

[dependencies.reqwest]
features = ["gzip"]
version = "0.11.20"

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread"]

[features]
