[package]
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
name = "hibp-check"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.78"
indicatif = "0.18.0"
itertools = "0.14.0"
kdbx4 = "0.5.1"
rpassword = "7.3.1"
futures = "0.3.30"
rayon = "1.8.0"
lazy_static = "1.4.0"
sha-1 = "0.10.1"

[dependencies.clap]
features = ["derive"]
version = "4.4.12"

[dependencies.reqwest]
features = ["gzip"]
version = "0.13.0"

[dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt-multi-thread"]

[features]
